# CandlelightEngine

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: FindGLM.cmake
src/: Makefile  additionalfile.h  main.cpp
src/Candlelight/: Candlellight.h
src/core/: Application.cpp  Application.h
src/core/data_handler/: DataLoader.cpp  DataLoader.h  TextureData.h
src/core/data_handler/structures/: Texture.cpp  Texture.h
src/core/io_processing/: IOProcessor.cpp  IOProcessor.h
src/core/objects/: Cube.cpp  Cube.h  Game_object.cpp  Game_object.h
src/core/rendering/: Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
